--- a/css/docs.css
+++ b/css/docs.css
@@ -1,9 +1,7 @@
-figcaption{
-color: #7c7a7d !important;
-}
 #slider-icon figcaption{
- color: #7c7a7d !important;
- margin-top: 5px;
+    color:  #223e70 !important;
+    font-size: 0.875rem;
+    margin-top: 5px;
 }
 figcaption.FAQ{
 color: #9789ad !important;
@@ -344,8 +342,15 @@ background: #afc4dd;
 .navStyle2 ul .dropdown-item{
     display: inline;
     margin: 0.25rem !important;
-    font-size: 0.75rem !important;
+    font-size: 0.8rem !important;
     font-weight: 400;
+}
+.navStyle2 ul .dropdown-item:hover{
+    color: #223d70;
+    font-weight: 500;
+}
+.navStyle2 ul .dropdown-item.active, .navStyle2 ul .dropdown-item:active{
+    background-color: #ebebeb;
 }
 .navStyle2 ul .dropdown-item .fa-chevron-right:before{
     color: #a890ba;
@@ -355,10 +360,10 @@ background: #afc4dd;
     left: -75% !important;
 }
 .navStyle2 ul .dropdown-menu.in{
-    left: -150% !important;
+    left: -175% !important;
 }
 .navStyle2 ul .dropdown-menu.bnf{
-       left: -100% !important;
+       left: -125% !important;
 }
 .navStyle2 ul .dropdown-menu.md{
       right: -100% !important;
@@ -830,7 +835,7 @@ input[type="text"].language::-webkit-input-placeholder {
 
 @media (max-width: 1300px){
     .navStyle2 ul .dropdown-menu.ps{
-        left: -50% !important;
+        left: -80% !important;
     }
      .form-no{
      font-size: 2.5em;
@@ -838,7 +843,7 @@ input[type="text"].language::-webkit-input-placeholder {
 }
 @media (max-width: 1200px){
     nav.navbar table.table td {
-        padding: 0 1.5rem;
+        padding: 0 1rem;
     }
     .search {
         width: 15%;
@@ -849,7 +854,12 @@ input[type="text"].language::-webkit-input-placeholder {
 }
 @media (max-width: 1100px){
     nav.navbar table.table td {
-        padding: 0 0.85rem;
+        padding: 0 0.75rem;
+    }
+    nav.navbar table.table td:last-child {
+        right: 0;
+        padding: 1rem 0.75rem;
+        font-size: 0.875rem;
     }
     /* #requ-tab{
         left: 53%;
