--- a/wp/wp-content/themes/leadway_pensure/css/docs.css
+++ b/wp/wp-content/themes/leadway_pensure/css/docs.css
@@ -241,7 +241,7 @@ nav.navbar table.table td {
     border-top: none;
     vertical-align: middle;
     font-size: 0.85rem;
-    padding: 0 2rem;
+    padding: 0 1.5rem;
     height: 50px;
     color: white;
     border-left: 2px solid white;
@@ -282,7 +282,7 @@ table .form-group{
 .v-trends {
     font-size: 0.75rem;
     padding: .5rem;
-    border-radius: 10px;
+    border-radius: 20px;
     color: white;
     border: 1px solid white;
 }
@@ -318,7 +318,7 @@ background: #afc4dd;
 .navStyle2 li.dropdown > a:hover{
     cursor: default;
 }
-.navStyle2 ul .navbar-brand{
+.navStyle2 .navbar-brand{
     margin: 0 2.5% 0 7.5%;
 }
 .search{
@@ -418,8 +418,8 @@ a.logo{
 text-align:center;
 }
 .intro-box {
-color: #7f7f7f;
-    margin-bottom: 2.5%;
+	color: #7f7f7f;
+    margin-bottom: 20px;
 }
 #confirm-form{
 height: 324px;
@@ -430,19 +430,17 @@ height: 324px;
 .intro-box p{
 font-weight:300
 }
-div.message-box{
-background: #1f69a5;
-box-shadow: rgba(41, 43, 59, 0.65) 1px 3px 6px;
-position:relative;
-z-index:1;
+.message-box{
+	background: #1f69a5;
+	padding: 0;
+	z-index:1;
+	box-shadow: rgba(41, 43, 59, 0.65) 1px 3px 6px;
 }
 .message-box p{
-    position: relative;
-    top: 50%;
+    position: absolute;
     font-weight: 100;
     color: white;
     padding: 0 5%;
-    transform: translateY(-50%) !important;
 }
 .solutions, .solutions1{
 background-color: #e1e1e1;
@@ -452,7 +450,7 @@ color: #1f69a5;
     padding-bottom: 70px;
 }
 .solutions {
-    margin: .7% 0;
+	margin: 5px 0;
     font-size: 0.85rem;
     padding-bottom: 10px;
 }
@@ -985,17 +983,14 @@ input[type="text"].language::-webkit-input-placeholder {
     .intro-box p{
         font-size: 0.85rem;
     }
-    .message-box{
-        padding: 15px 30px;
+    .message-box {
+		height: 100px;
+	}
+    .message-box p{
+		font-size: 0.85rem;
     }
-    p.message-box{
-    font-size: 0.85rem;
-    }
-    div.message-box-container{
+    .message-box-container{
         margin-bottom: 0 !important;
-    }
-    div.solutions{
-    height: 33% !important;
     }
     button.b-style{
     font-size: 10px;
